@@ -1,0 +1,10 @@
+package com.jamiedev.bygone.client.models;
+
+import net.minecraft.client.model.geom.ModelPart;
+
+public class PeskyModel extends PestModel
+{
+    public PeskyModel(ModelPart root) {
+        super(root);
+    }
+}
