@@ -49,6 +49,7 @@
   "item.bygone.fungal_parent_spawn_egg": "Fungal Being Spawn Egg",
   "item.bygone.mooboo_spawn_egg": "Mooboo Spawn Egg",
   "item.bygone.nectaur_spawn_egg": "Nectaur Spawn Egg",
+  "item.bygone.pesky_spawn_egg": "Pesky Spawn Egg",
   "item.bygone.pest_spawn_egg": "Pest Spawn Egg",
   "item.bygone.scuttle_spawn_egg": "Scuttle Spawn Egg",
   "item.bygone.trilobite_spawn_egg": "Trilobite Spawn Egg",
@@ -287,6 +288,7 @@
   "entity.bygone.hydropus": "Hydropus",
   "entity.bygone.mooboo": "Mooboo",
   "entity.bygone.nectaur": "Nectaur",
+  "entity.bygone.pesky": "Pesky",
   "entity.bygone.pest": "Pest",
   "entity.bygone.trilobite": "Trilobite",
   "entity.bygone.scuttle": "Scuttle",
