@@ -2,6 +2,7 @@
   "replace": false,
   "values": [
     "bygone:copperbug",
+    "bygone:pesky",
     "bygone:pest",
     "bygone:trilobite"
   ]
